# dark-magic

./: Cargo.toml  LICENSE
benches/: mod_speed.rs
src/: lib.rs
